deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: takahe
  labels:
    app: takahe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: takahe
  template:
    metadata:
      labels:
        app: takahe
    spec:
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: takahe
      containers:
        - name: takahe
          image: "jointakahe/takahe:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: "/takahe/media"
              name: media
        - name: stator
          image: "jointakahe/takahe:latest"
          imagePullPolicy: Always
          command:
            - python
            - manage.py
            - runstator
          volumeMounts:
            - mountPath: "/takahe/media"
              name: media
