service.yaml
apiVersion: v1
kind: Service
metadata:
  name: takahe
  labels:
    app: takahe
spec:
  selector:
    app: takahe
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
