ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: takahe
  labels:
    app: takahe
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: takahe
            port:
              number: 80
        path: /
        pathType: Prefix
